@@ -1,3 +1,12 @@
+2011-11-15  Tony Chang  <tony@chromium.org>
+
+        Unreviewed, better fix for ref tests failures on SL Intel bot.
+        Revert the previous change and return None if pixel results from
+        either the test page or the expected page is missing.
+
+        * Scripts/webkitpy/layout_tests/layout_package/test_result_writer.py:
+        * Scripts/webkitpy/layout_tests/port/webkit.py:
+
 2011-11-15  James Robinson  <jamesr@chromium.org>
 
         [chromium] Merge chromium-gpu layout test configurations into non-gpu versions
